# fantasy_data_pipeline

./: .gitignore  .pre-commit-config.yaml  .~lock.player_key_update.csv#  CLAUDE.md  DATA_SOURCES.md  FUNCTIONALITY_PRESERVATION.md  HW_SCRAPER_IMPROVEMENTS.md  MIGRATION.md  README.md  RESTRUCTURING_COMPLETE.md  SCRAPER-PLAN.md  SIMPLIFICATION_SUMMARY.md  TODO.md  WEEKLY_RANKINGS_SETUP.md  player_key_dict.json  pyproject.toml  rankings.py  requirements.txt
.claude/agent-memory/info-retrieval-specialist/: MEMORY.md  source_sleeper_adp.md
.claude/agent-memory/playwright-automation-engineer/: MEMORY.md  draftsharks-export.md
.claude/agents/: info-retrieval-specialist.md  playwright-automation-engineer.md  staff-engineer.md
.github/workflows/: ci.yml
app/: __init__.py  bb_rankings_processor.py  example_usage.py  player_stats.py  rankings.py  rankings_processor.py  redraft_rankings_processor.py
docs/: DOCUMENTATION_STANDARDS.md  README.md  data-sources.md  manual_source_guide.md  source_feasibility.md  usage.md
docs/api/: source-library.md
docs/development/: COMPLETE_CONSOLIDATION_SUMMARY.md  FUNCTIONALITY_PRESERVATION.md  RANKINGS_APP_MIGRATION.md  REORGANIZATION_SUMMARY.md  SIMPLIFICATION_SUMMARY.md
docs/guides/: README.md
notebooks/: .~lock.df_rank_clean.csv#  ff-data.ipynb  ff-player-key.ipynb  ff-rankings.ipynb
scripts/: __init__.py  clean_cols.py  clean_cols_bb.py  clean_cols_redraft.py  fix_player_key_collisions.py  load_data.py  update_player_key.py
src/: README.md  __init__.py  adp_processor.py  base_processor.py  config.py  data_loader.py  draftshark_adp_processor.py  draftshark_rank_processor.py  ds_processor.py  fantasypros_processor.py  fp_processor.py  fpts_processor.py  hw_processor.py  hw_scraper_integration.py  jj_processor.py  pff_processor.py  player_utils.py  rankings_processor.py  season_stats_processor.py  test_processors.py  utils.py  weekly_stats_processor.py
src/fantasy_pipeline/: __init__.py  config.py  utils.py
src/fantasy_pipeline/cli/: __init__.py  main.py  rankings.py  stats.py
src/fantasy_pipeline/core/: __init__.py  base_processor.py  rankings_processor.py  season_data_builder.py  season_stats_processor.py  stats_aggregator.py  weekly_stats_processor.py
src/fantasy_pipeline/data/: __init__.py  loader.py  player_utils.py
src/fantasy_pipeline/scraper/: __init__.py  auth.py  fetch_rankings.py  hw_scraper.py  integration.py
src/hw_scraper/: __init__.py  scraper.py
tests/: conftest.py  test_auth.py  test_config.py  test_data_loader.py  test_fetch_draftsharks.py  test_fetch_fpts.py  test_fetch_jj.py  test_fetch_pff.py  test_fetch_rankings.py  test_hw_scraper.py  test_player_key_integrity.py  test_player_utils.py  test_rankings_processor.py  test_refresh_all.py  test_season_data_builder.py  test_session_auto_login.py  test_stats_aggregator.py
