
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-pipeline"
version = "0.3.0"
description = "A comprehensive Python pipeline for processing fantasy football rankings data from multiple sources with automated web scraping"
readme = "README.md"
authors = [
    {name = "Henry Marsh"},
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "openpyxl>=3.1.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "ipykernel>=6.27.1",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
ff-rankings = "fantasy_pipeline.cli.rankings:main"
ff-stats = "fantasy_pipeline.cli.stats:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "notebook>=7.0.0",
]
headless = [
    "playwright>=1.40",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/henrymarsh/fantasy_data_pipeline"
Documentation = "https://github.com/henrymarsh/fantasy_data_pipeline/tree/main/docs"
Repository = "https://github.com/henrymarsh/fantasy_data_pipeline"
Issues = "https://github.com/henrymarsh/fantasy_data_pipeline/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Pyflakes (F) plus the pycodestyle subset ruff enables by default.
# E501 (line-too-long) is intentionally omitted — several data/regex lines are long by design.
select = ["E4", "E7", "E9", "F"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
# The codebase is not yet fully typed (pandas-heavy); run informationally, not as a gate.
warn_unused_ignores = true
